[package]
name = "log_loki"
version = "0.1.0"
authors = ["Nik <kano@pulter.tv>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
fnv = "1.0.6"
chrono = "0.4.7"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"