[package]
name = "log_loki"
version = "0.1.0"
authors = ["Nik <kano@pulter.tv>"]
edition = "2018"
[lib]
crate-type = ["cdylib","rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
fnv = "1.0.6"
chrono = "0.4.7"
ureq = "0.11.0"
snap = "0.2.5"
error-chain = "0.12.1"
quick-protobuf = "0.6.3"

[build-dependencies]
pb-rs = "0.8.2"